fixed the heading layout issue in the stylesheet

--- a/app/assets/stylesheets/patients.css.scss
+++ b/app/assets/stylesheets/patients.css.scss
@@ -1,7 +1,7 @@
 @import "mixins";
 
 
-dl {
+dl.patient {
   color: #888888;
   display: table-cell;
   text-transform: uppercase;
